# EmotionScope

./: .gitignore  pyproject.toml
data/: emotions_171.json  emotions_core40.json
data/story_contributions/: expansion_batch1.jsonl
data/templates/: emotion_stories.jsonl
data/validation/: activities.json
docs/: PAPER_EMOTION_CLUSTERS.md  PAPER_GAP_ANALYSIS.md  RESULTS_PART1.md
docs/superpowers/plans/: 2026-07-06-part0-foundation-steering-tracking.md  2026-07-06-part1-validation-experiments.md  2026-07-06-part2-representational-characterization.md  2026-07-06-part3-in-the-wild.md
docs/superpowers/specs/: 2026-07-06-emotionscope-paper-repro-roadmap-design.md
emotion_scope/: __init__.py  config.py  interpret.py  preference.py  steer.py  tracking.py  utils.py
results/vectors/: google_gemma-2-2b-it.pt
scripts/: check_steering_congruence.py  ingest_stories.py  plot_part1_results.py  run_activity_preference.py  run_causal_steering_controlled.py  run_logit_lens.py
tests/: test_config.py  test_data_files.py  test_imports.py  test_interpret.py  test_preference.py  test_steer.py  test_tracking.py  test_utils.py
